# Speedometer-Project

./: CMakeLists.txt  README.md
desktop/client/: main.cpp
desktop/client/include/: canvas.h  comservice.h  serialportservice.h  tcpservice.h  window.h
desktop/client/src/: canvas.cpp  comservice.cpp  serialportservice.cpp  tcpservice.cpp  window.cpp
desktop/server/: main.cpp
desktop/server/include/: comservice.h  serialportservice.h  tcpservice.h  window.h
desktop/server/src/: comservice.cpp  serialportservice.cpp  tcpservice.cpp  window.cpp
esp32/client/: platformio.ini
esp32/client/src/: main.cpp
esp32/server/: platformio.ini
esp32/server/src/: main.cpp
shared/: setting.h
